--- a/bff.cabal
+++ b/bff.cabal
@@ -11,6 +11,7 @@ cabal-version:  >= 1.2
 
 library
         exposed-modules:
+                Data.SimpleTree
                 Data.Zippable
                 Data.Derive.Zippable
                 Bff
