--- a/bff.cabal
+++ b/bff.cabal
@@ -65,7 +65,7 @@ executable bff-shell
                 MyInterpret
         if flag(binaries)
                 build-depends:
-                        base, directory, hint
+                        base, directory, hint >= 0.3.2
                 buildable: True 
         else
                 buildable: False
@@ -77,7 +77,7 @@ executable bff-cgi
                 MyInterpret
         if flag(binaries)
                 build-depends:
-                        base, directory, xhtml, cgi, hint, utf8-string
+                        base, directory, xhtml, cgi, hint >= 0.3.2, utf8-string
                 buildable: True 
         else
                 buildable: False
